vault ui, cert manager, ingress, gemini, npm scripts

--- a/modules/vault/templates/values.tmpl
+++ b/modules/vault/templates/values.tmpl
@@ -23,8 +23,8 @@ server:
 
         listener "tcp" {
           tls_disable     = ${tls_disable}
-          tls_cert_file   = "/vault/userconfig/tls/tls_crt"
-          tls_key_file    = "/vault/userconfig/tls/tls_key"
+          tls_cert_file   = "/vault/userconfig/tls/tls.crt"
+          tls_key_file    = "/vault/userconfig/tls/tls.key"
           address         = "[::]:8200"
           cluster_address = "[::]:8201"
         }
@@ -36,10 +36,12 @@ server:
         service_registration "kubernetes" {}
   extraVolumes:
     - type: secret
-      name: tls
+      name: ${tls_secret_name}
   extraEnvironmentVars:
     VAULT_ADDR: https://127.0.0.1:8200
     VAULT_SKIP_VERIFY: true
 ui:
   enabled: ${enable_vault_ui}
   serviceType: ${vault_service_type}
+  annotations:
+    service.beta.kubernetes.io/do-loadbalancer-hostname: ${workaround_subdomain_name}
