many new modules

--- a/modules/foundry/templates/values.tmpl
+++ b/modules/foundry/templates/values.tmpl
@@ -43,7 +43,7 @@ podAnnotations:
   vault.hashicorp.com/tls-skip-verify: "true"
 
 persistence:
-  claimName: ${foundry_server_name}
+  claimName: ${claim_name}
   size_gbs: "100Gi"
 
 resources:
