yes it mostly works now with a new foundry module for the tls secret

--- a/modules/foundry/templates/values.tmpl
+++ b/modules/foundry/templates/values.tmpl
@@ -17,7 +17,7 @@ ingress:
       paths:
         - /
   tls:
-    - secretName: ${foundry_server_name}-tls
+    - secretName: ${foundry_server_tls_secret_name}
       hosts:
         - ${hostname}
   annotations:
