--- a/modules/foundry/templates/values.tmpl
+++ b/modules/foundry/templates/values.tmpl
@@ -16,14 +16,10 @@ ingress:
     - host: ${hostname}
       paths:
         - /
-  tls:
-    - secretName: ${foundry_server_tls_secret_name}
-      hosts:
-        - ${hostname}
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: ${issuer_name}
-    kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri
+    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
 
 podAnnotations:
   vault.hashicorp.com/agent-inject: "true"
