maybe this is related to my problems

--- a/modules/foundry_oauth2_proxy/templates/values.tmpl
+++ b/modules/foundry_oauth2_proxy/templates/values.tmpl
@@ -28,6 +28,7 @@ ingress:
     kubernetes.io/tls-acme: "true"
     cert-manager.io/cluster-issuer: ${cluster_issuer_ref_name}
     nginx.ingress.kubernetes.io/proxy-body-size: 100m
+    kubernetes.io/ingress.class: nginx
   path: '/oauth2'
   hosts:
     - "${foundry_hostname}"
