--- a/modules/foundry/templates/values.tmpl
+++ b/modules/foundry/templates/values.tmpl
@@ -17,6 +17,7 @@ ingress:
       paths:
         - /
   annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: 100m
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri
     nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
